@@ -1,4 +1,6 @@
 4.5 -> 5.0:
+    - rpm.org: permit mire RE's against binary data. Useless ... (#277161).
+    - rpm.org: mire RE against missing data now mis-matches rather than matches.
     - jbj: remove ancient %verifyscript tag != 1079 retrofit.
     - rpm.org: fix whitespace-in-files issues in find-debuginfo.sh.
     - rpm.org: new debuginfo script.
